Fixing compilation issue

--- a/server/src/main/resources/template.yaml
+++ b/server/src/main/resources/template.yaml
@@ -1,6 +1,6 @@
-Product Two:
+freshrelease:
      P2 Template1 : p2_template1.ftl
      P2 Template2 : p2_template2.ftl
-Product One:
-    User Creation : user_create_config.ftl
+freshservice:
+    BaseTemplate : user_create_config.ftl
     P1 Template : p1_template2.ftl
