--- a/server/src/main/resources/template.yaml
+++ b/server/src/main/resources/template.yaml
@@ -2,5 +2,5 @@ freshrelease:
      P2 Template1 : p2_template1.ftl
      P2 Template2 : p2_template2.ftl
 freshservice:
-    BaseTemplate : user_create_config.ftl
-    P1 Template : p1_template2.ftl
+    Base Audit Template : audit_config.ftl
+    Base Activiy feed Template : feed_config.ftl
